<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Name -->
    <string name="app_name">OpenTube</string>

    <!-- Splash Screen -->
    <string name="splash_message">Experience a better way to browse YouTube</string>

    <!-- Bottom Navigation -->
    <string name="btn_nav_home">Home</string>
    <string name="btn_nav_subscription">Subscription</string>
    <string name="btn_nav_library">Library</string>
    <string name="btn_nav_community">Community</string>



    
    <!-- Video Player Strings -->
    <string name="video_player">Video Player</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="more_options">More Options</string>
    <string name="picture_in_picture">Picture in Picture</string>
    <string name="audio_track">Audio Track</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="video_quality">Video Quality</string>
    <string name="speed">Speed</string>
    <string name="quality">Quality</string>
    <string name="live">LIVE</string>

    <string name="back_button">Back</string>
    <string name="cast_button">Cast</string>
    <string name="cc_button">Captions</string>
    <string name="settings_button">Settings</string>
    <string name="replay_10_seconds">Replay 10s</string>
    <string name="play_pause_button">Play/Pause</string>
    <string name="forward_10_seconds">Forward 10s</string>
    <string name="orientation_toggle">Toggle orientation</string>

    <!-- Video Player Control Descriptions -->
    <string name="desc_back_button">Navigate back</string>
    <string name="desc_cast_button">Cast to device</string>
    <string name="desc_more_options">More options</string>
    <string name="desc_settings">Player settings</string>
    <string name="desc_previous">Previous video</string>
    <string name="desc_rewind">Rewind 10 seconds</string>
    <string name="desc_play_pause">Play or pause</string>
    <string name="desc_fast_forward">Fast forward 10 seconds</string>
    <string name="desc_next">Next video</string>
    <string name="desc_subtitle_toggle">Toggle subtitles</string>
    <string name="desc_fullscreen_toggle">Toggle fullscreen</string>
    
    <!-- Channel and Video Info -->
    <string name="channel_avatar">Channel Avatar</string>
    <string name="subscribe">Subscribe</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="show_more">Show More</string>
    <string name="expand_comments">Expand comments</string>
    
    <!-- Comments -->
    <string name="comments">Comments</string>
    <string name="sort_comments">Sort Comments</string>
    <string name="user_avatar">User Avatar</string>
    <string name="add_comment">Add a comment…</string>
    <string name="view_all_comments">View All Comments</string>
    
    <!-- Related Videos -->
    <string name="related_videos">Related Videos</string>
    
    <!-- Player Error States -->
    <string name="error">Error</string>
    <string name="playback_error">Playback Error</string>
    <string name="unable_to_play_video">Unable to play this video</string>
    <string name="retry">Retry</string>
    
    <!-- ExoPlayer Standard Strings -->
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_fastforward_description">Fast Forward</string>
    <string name="exo_controls_fullscreen_description">Fullscreen</string>
    <string name="exo_controls_cc_description">Closed Captions</string>
    <string name="exo_controls_repeat_off_description">Repeat Off</string>
    <string name="exo_controls_repeat_one_description">Repeat One</string>
    <string name="exo_controls_repeat_all_description">Repeat All</string>
    <string name="exo_controls_shuffle_off_description">Shuffle Off</string>
    <string name="exo_controls_shuffle_on_description">Shuffle On</string>
    <string name="expriment">Expriment</string>
    
    <!-- Add these strings to your strings.xml file -->
    <string name="exo_controls_vr_description">Toggle VR mode</string>
    <string name="exo_controls_repeat_description">Toggle repeat mode</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="search_description">Search Description</string>
    <string name="menu_description">Menu Description</string>
</resources>